--- a/STL/STL.vcxproj.filters
+++ b/STL/STL.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="UnorderedMapStuff.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EPI1002.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
