--- a/Arrays/Arrays.vcxproj.filters
+++ b/Arrays/Arrays.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="FirstRepeat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AddOneToArrayNumber.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
