--- a/String/String.vcxproj
+++ b/String/String.vcxproj
@@ -113,6 +113,7 @@
     <ClCompile Include="EPI_1002.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="StringPractice.cpp" />
+    <ClCompile Include="stringstreamPractice.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
