--- a/String/String.vcxproj.filters
+++ b/String/String.vcxproj.filters
@@ -27,5 +27,11 @@
     <ClCompile Include="stringstreamPractice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ReverseVowels.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IntToString.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
