--- a/String/String.vcxproj
+++ b/String/String.vcxproj
@@ -114,6 +114,7 @@
     <ClCompile Include="EPI_1002.cpp" />
     <ClCompile Include="IntToString.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PalindromicString.cpp" />
     <ClCompile Include="ReplaceAndRemove.cpp" />
     <ClCompile Include="ReverseVowels.cpp" />
     <ClCompile Include="SpreadSheetEncoding.cpp" />
