--- a/CompletelyRandom/CompletelyRandom.vcxproj
+++ b/CompletelyRandom/CompletelyRandom.vcxproj
@@ -19,8 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{0AF29DED-B12D-4331-8FE9-84885F239AA9}</ProjectGuid>
-    <RootNamespace>String</RootNamespace>
+    <ProjectGuid>{A1165075-9496-44DB-96DB-E8FAAF658868}</ProjectGuid>
+    <RootNamespace>CompletelyRandom</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -110,13 +110,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="EPI_1002.cpp" />
-    <ClCompile Include="Hexa.cpp" />
-    <ClCompile Include="IntToString.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="ReverseVowels.cpp" />
-    <ClCompile Include="StringPractice.cpp" />
-    <ClCompile Include="stringstreamPractice.cpp" />
+    <ClCompile Include="typeCasting.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
