--- a/CompletelyRandom/CompletelyRandom.vcxproj.filters
+++ b/CompletelyRandom/CompletelyRandom.vcxproj.filters
@@ -18,22 +18,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="EPI_1002.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="StringPractice.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="stringstreamPractice.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ReverseVowels.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="IntToString.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Hexa.cpp">
+    <ClCompile Include="typeCasting.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
