--- a/Miscallaneous/Miscallaneous.vcxproj
+++ b/Miscallaneous/Miscallaneous.vcxproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <ClCompile Include="EPI_4_1.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MainCopy.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
