--- a/Miscallaneous/Miscallaneous.vcxproj.filters
+++ b/Miscallaneous/Miscallaneous.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="EPI_4_1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MainCopy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
