--- a/BitManip/BitManip.vcxproj
+++ b/BitManip/BitManip.vcxproj
@@ -19,8 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{6BBA98C8-DC3D-412D-9D22-B6ABF6120B96}</ProjectGuid>
-    <RootNamespace>Trees</RootNamespace>
+    <ProjectGuid>{26D59511-32D0-4563-A7D1-658A22191A19}</ProjectGuid>
+    <RootNamespace>BitManip</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -110,8 +110,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BSTree.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NegativeNumber.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
