--- a/BitManip/BitManip.vcxproj.filters
+++ b/BitManip/BitManip.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BSTree.cpp">
+    <ClCompile Include="NegativeNumber.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
