--- a/Graph/Graph.vcxproj.filters
+++ b/Graph/Graph.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="Graph103.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GraphDFS01.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
