--- a/Graph/Graph.vcxproj.filters
+++ b/Graph/Graph.vcxproj.filters
@@ -30,5 +30,13 @@
     <ClCompile Include="GraphDFS01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GraphBFS01.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Graph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
