--- a/Recursion/Recursion.vcxproj
+++ b/Recursion/Recursion.vcxproj
@@ -114,6 +114,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Palindrome.cpp" />
     <ClCompile Include="Power.cpp" />
+    <ClCompile Include="PrintNumbers.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
