--- a/Recursion/Recursion.vcxproj.filters
+++ b/Recursion/Recursion.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="Power.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PrintNumbers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
