--- a/Miscallaneous/Miscallaneous.vcxproj.filters
+++ b/Miscallaneous/Miscallaneous.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="MainCopy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ObjectSize.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="STLList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
